--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
 </head>
 
-<body>+-+-s
+<body>
   <header>
     <img src="assets/images/icons/clear-view-escapes.svg">
     <a href="#" class="btn">Get in Touch</a>
@@ -58,18 +58,21 @@
         <div class="row__medium-8 row__medium-8--smaller">
           <div class="generic-content-container">
             <h2 class="headline headline--mt-0">Here&rsquo;s how we got started&hellip;</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut aliquip
               ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
               nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
               est laborum.
             </p>
-            <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat nulla
+            <p>
+              Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat nulla
               pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
               laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua.
             </p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+            <p>
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
               sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum velit esse
               cillum <strong>dolore eu fugiat.</strong>
             </p>
@@ -94,7 +97,8 @@
           <div class="feature-item">
             <img class="feature-item__icon" src="assets/images/icons/globe.svg">
             <h3 class="feature-item__title">Global Guides</h3>
-            <p>We&rsquo;ve scoured the entire planet for the best retreats and beautiful vistas. If there&rsquo;s a corner of
+            <p>
+              We&rsquo;ve scoured the entire planet for the best retreats and beautiful vistas. If there&rsquo;s a corner of
               the world you want to escape to we know the most scenic and inspiring locations.
             </p>
           </div>
@@ -103,14 +107,16 @@
           <div class="feature-item">
             <img class="feature-item__icon" src="assets/images/icons/wifi.svg">
             <h3 class="feature-item__title">Wi-Fi Waypoints</h3>
-            <p>We only send you on trips to places we can personally vouch for as being amazing. Which means we&rsquo;ve mapped
+            <p>
+              We only send you on trips to places we can personally vouch for as being amazing. Which means we&rsquo;ve mapped
               out where local wi-fi spots are and marked them in our app&rsquo;s map view.
             </p>
           </div>
           <div class="feature-item">
             <img class="feature-item__icon" src="assets/images/icons/fire.svg">
             <h3 class="feature-item__title">Survival Kit</h3>
-            <p>Everytime you book an escape with us we send you a survival kit with the finest materials. The kit will allow you
+            <p>
+              Everytime you book an escape with us we send you a survival kit with the finest materials. The kit will allow you
               to setup a tent, start a fire, scratch your own back and lower your taxes.
             </p>
           </div>
@@ -119,34 +125,59 @@
     </div>
   </div>
 
-  <div id="testimonials">
-      <img src="assets/images/icons/comment.svg">
-      <h2>Real Testimonials</h2>
+  <div id="testimonials" class="page-section page-section--no-b-padding-until-large page-section--testimonials">
+    <div class="wrapper wrapper--no-padding-until-large">
+      <h2 class="section-title section-title--blue"><img class="section-title__icon" src="assets/images/icons/comment.svg">Real <strong>Testimonials</strong></h2>
+      <div class="row row--gutters row--gutters-small row--pt-5 row--equal-height-at-large generic-content-container">
 
-      <img src="assets/images/testimonial-jane.jpg">
-      <h3>Jane Doe</h3>
-      <h3>9 Time Escaper</h3>
-      <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua.&rdquo;
-      </p>
+        <div class="row__large-4">
+          <div class="testimonial">
+            <div class="testimonial__photo">
+              <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
+            </div>
+            <h3 class="testimonial__title">Jane Doe</h3>
+            <h4 class="testimonial__subtitle">9 Time Escaper</h4>
+            <p>
+              &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua.&rdquo;
+            </p>
+          </div>
+        </div>
 
-      <img src="assets/images/testimonial-john.jpg">
-      <h3>John Smith</h3>
-      <h3>4 Time Escaper</h3>
-      <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur.&rdquo;
-      </p>
+        <div class="row__large-4">
+          <div class="testimonial">
+            <div class="testimonial__photo">
+              <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
+            </div>
+            <h3 class="testimonial__title">John Smith</h3>
+            <h4 class="testimonial__subtitle">4 Time Escaper</h4>
+            <p>
+              &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Lorem ipsum dolor sit amet, consectetur.&rdquo;
+            </p>
+          </div>
+        </div>
 
-      <img src="assets/images/testimonial-cat.jpg">
-      <h3>Cat McKitty</h3>
-      <h3>6 Time Escaper</h3>
-      <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;
-      </p>
+        <div class="row__large-4">
+          <div class="testimonial testimonial--last">
+            <div class="testimonial__photo">
+              <img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
+            </div>
+            <h3 class="testimonial__title">Cat McKitty</h3>
+            <h4 class="testimonial__subtitle">6 Time Escaper</h4>
+            <p>
+              &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
   </div>
 
   <footer>
